# adcdb

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DATA_MODEL.md  Makefile  PLAN.md  README.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: architect.md  backend-dev.md  devops-engineer.md  frontend-dev.md  qa-engineer.md
.claude/skills/api-security-checklist/: skill.md
_workspace/: 00_input.md  01_architecture.md  02_api_spec.md  03_db_schema.md  04_test_plan.md  05_deploy_guide.md  06_review_report.md  backend_report.md  frontend_report.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: db45559cbb4e_initial_tables.py
backend/app/: config.py  main.py
backend/app/models/: __init__.py  activity.py  adc.py  antibody.py  antigen.py  linker.py  payload.py
backend/app/routers/: adcs.py  antibodies.py  antigens.py  linkers.py  payloads.py  search.py  stats.py
backend/app/schemas/: activity.py  adc.py  antibody.py  antigen.py  linker.py  payload.py
backend/app/services/: chemistry_service.py  sequence_service.py
backend/app/structure/: assembler.py  conformer.py
backend/tests/: conftest.py  test_api_endpoints.py  test_chemistry_service.py  test_sequence_service.py  test_structure.py
data/: add_lp_smiles.py  generate_structures.py  seed.py
data/sources/: seed_data.json
frontend/: index.html  package-lock.json  package.json
frontend/public/: rdkit-worker-2.10.2.js
frontend/src/: App.tsx  globals.css  main.tsx
frontend/src/lib/: api.ts
plans/: backend.md  data.md  frontend.md  index.md
(+15 files in other folders)
