[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncmy>=0.2.11",
    "biopython>=1.86",
    "fastapi>=0.135.1",
    "pydantic-settings>=2.13.1",
    "rdkit>=2025.9.6",
    "sqlalchemy[asyncio]>=2.0.48",
    "uuid-utils>=0.14.1",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
